fix playground address wrapping funny

--- a/less/app.less
+++ b/less/app.less
@@ -1036,6 +1036,7 @@ section#the-goods { margin-top: 44px; }
             .address-meta-wrapper {
                 display: table;
                 width: 100%;
+                clear: both;
             }
             .address-meta,
             .directions-wrapper {
